[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/pin.png" type="Texture" id=1]
[ext_resource path="res://scripts/Pin.gd" type="Script" id=2]
[ext_resource path="res://themes/handwritten.tres" type="Theme" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.9533

[node name="pin" type="Area2D"]
script = ExtResource( 2 )

[node name="pinSprite" type="Sprite" parent="."]
position = Vector2( -6.54895, 8.75149 )
z_index = -1
texture = ExtResource( 1 )

[node name="pinCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="pinLabelAnchor" type="Node2D" parent="."]

[node name="pinLabel" type="Label" parent="pinLabelAnchor"]
margin_left = -100.622
margin_top = -28.311
margin_right = -24.622
margin_bottom = 30.689
theme = ExtResource( 3 )
text = "+12V"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_pin_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_pin_mouse_exited"]
